--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "prisma": "^6.7.0",
