--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.2",
+    "@tailwindcss/typography": "^0.5.16",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
+    "next-mdx-remote": "^5.0.0",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
