--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.2",
     "@tailwindcss/typography": "^0.5.16",
@@ -20,6 +21,7 @@
     "next-mdx-remote": "^5.0.0",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
