--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
